# rus-srp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  package-lock.json
server/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  database.db  database.db-shm  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prod.sh  readme.md  server.sh  words.db
server/migrations/2022-09-10-204301_words/: down.sql  up.sql
server/migrations/2023-05-25-140925_create_users/: up.sql
server/migrations/2023-05-25-165201_username_uniq/: down.sql  up.sql
server/migrations/2023-05-26-131006_user_id_not_null/: down.sql  up.sql
server/migrations/2023-05-27-105638_add_word_categories_table/: down.sql  up.sql
server/migrations/2023-05-28-142310_change_word_id_to_integer/: down.sql  up.sql
server/migrations/2023-05-28-161142_change_user_id_to_int/: down.sql  up.sql
server/migrations/2023-06-12-201907_add_date_into_words/: down.sql  up.sql
server/migrations/2023-06-27-200232_add_image_into_words/: down.sql  up.sql
server/migrations/2023-07-09-121854_words_with_categories_many_to_many/: down.sql  up.sql
server/migrations/2023-07-09-134921_rename_word_categories_to_categories/: down.sql  up.sql
server/migrations/2023-07-09-141041_rename_word_categories_words_to_words_categories/: down.sql  up.sql
server/migrations/2023-07-09-143034_rename_word_category_id_to_category_id/: down.sql  up.sql
server/migrations/2023-07-09-145820_add_unique_to_words_categories/: down.sql  up.sql
server/migrations/2023-07-15-154053_add_created_at_field_to_user/: down.sql  up.sql
server/migrations/2023-07-21-072028_remove_id_from_words_categories/: down.sql  up.sql
server/migrations/2023-07-22-100013_add_cascade_removing_for_words_categories/: down.sql  up.sql
server/migrations/2023-10-08-132348_new_category_fields/: down.sql  up.sql
server/src/: actions.rs  handlers.rs  main.rs  models.rs  schema.rs  utils.rs
(+721 files in other folders)
