[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"

[dev-dependencies]
cargo-watch = "7.8.0"
