[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde"] }

[dev-dependencies]
cargo-watch = "7.8.0"
