[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.5"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = [
  "sqlite",
  "r2d2",
  "chrono",
  "returning_clauses_for_sqlite_3_35",
] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
bcrypt = "0.14.0"
jsonwebtoken = "9.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
cargo-watch = "7.8.0"
